k8s/application/2-service-load-balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: order-ws
  labels:
    app: order-ws
spec:
  selector:
    app: order-ws
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8099
      nodePort: 32000
      protocol: TCP
