k8s/application/4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: order-ws
  labels:
    app: order-ws
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "order-ws.test"
    - http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: order-ws
                port:
                  number: 80
